--- a/my-app/src/components/ArticleList/style.css
+++ b/my-app/src/components/ArticleList/style.css
@@ -1,16 +1,107 @@
-.article-list__li{
-	list-style:none;
-}
 
 .top-buffer { margin-top:20px; }
 
-/* .date-rotate {
-    transform: rotateX(90deg); 
-   } */
-   p.date-rotate{
-   -webkit-transform: rotate(-90deg); 
+ p.date-rotate{
+  -webkit-transform: rotate(-90deg); 
   -moz-transform: rotate(-90deg);
   -ms-transform: rotate(-90deg);
   -o-transform: rotate(-90deg);
   transform: rotate(90deg);
+}
+
+.headerLable{
+	height:10%;
+	background :#acac90
+}
+.headerText{
+	margin-top : 20px;
+	margin-left  : 100px
+}
+.rowWraper{
+	border-bottom: solid #acac90;
+	border-width: 0px 0px 1px 0px;
+}
+
+.colPadMin{
+	padding-left: 0
+}
+.colPadMinRight{
+	padding-right: 0
+}
+
+.dataWraper{
+	width:100%;
+	height:100%;
+	display:block;
+	float:left;
+	background:#acac90;
+	font-size:100%;
+}
+.dataWraperDateNumber{
+	width:70%;
+	height:20%;
+	float:left;
+	border-bottom:solid beige;
+	margin-left:15%;
+	font-size:1.5em;
+	padding-right: 0;
+	padding-left: 0;
+	padding-bottom: 0;
+	padding-top: 0;
+}
+.dataWraperMonthYear{
+	width:40%;
+	height:80%;
+	float:left;
+	margin-left:10%;
+	margin-top:10%;
+}
+.dataWraperWeekDay{
+	 width: 40%;
+	 height: 80%;
+	 float:left;
+	 margin-top:10%;
+
+}
+.dataLableMin{
+	width: 10%;
+	height: 60%;
+	display: block;
+	position: absolute;
+	font-size: 60%;
+	margin-left:-5%;
+}
+.dataLableMax{
+	width: 8%;
+	height: 40%;
+	display: block;
+	position: absolute;	
+}
+
+.commentHeader{
+	background:#acac90;
+	border:1px solid black;
+	
+}
+
+.commentBody{
+	
+	border-right: 1px solid black;
+	border-left:1px solid black;
+	border-bottom: 1px solid black;
+}
+.calendar_day_list {
+    padding: 13px 24px;
+}
+.calendar_day_list li {
+    display: inline-block;
+    padding: 5px 6px 5px 5px;
+    padding-top: 5px;
+    padding-right: 6px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    text-align: center;
+    font-size: 11px;
+    font-weight: bold;
+    color: #666;
 }
