--- a/my-app/src/components/ArticleList/style.css
+++ b/my-app/src/components/ArticleList/style.css
@@ -26,12 +26,17 @@
 	padding-left: 0
 }
 .colPadMinRight{
-	padding-right: 0
+	padding-right: 0;
+	margin-left: 65%;
+	margin-top: 10%;
+    width: min-content;
+    text-align: right
 }
 
 .dataWraper{
 	width:100%;
 	height:100%;
+	
 	display:block;
 	float:left;
 	background:#acac90;
@@ -39,7 +44,9 @@
 }
 .dataWraperDateNumber{
 	width:70%;
-	height:20%;
+	/* height:20%; */
+	height:min-content;
+	
 	float:left;
 	border-bottom:solid beige;
 	margin-left:15%;
@@ -51,21 +58,23 @@
 }
 .dataWraperMonthYear{
 	width:40%;
-	height:80%;
+	/* height:80%; */
+	height:min-content;
 	float:left;
 	margin-left:10%;
 	margin-top:10%;
 }
 .dataWraperWeekDay{
 	 width: 40%;
-	 height: 80%;
+	 /* height: 80%; */
+	 height:min-content;
 	 float:left;
 	 margin-top:10%;
 
 }
 .dataLableMin{
 	width: 10%;
-	height: 60%;
+	height:90px;
 	display: block;
 	position: absolute;
 	font-size: 60%;
@@ -73,7 +82,7 @@
 }
 .dataLableMax{
 	width: 8%;
-	height: 40%;
+	height:150px;
 	display: block;
 	position: absolute;	
 }
@@ -90,18 +99,11 @@
 	border-left:1px solid black;
 	border-bottom: 1px solid black;
 }
-.calendar_day_list {
-    padding: 13px 24px;
-}
-.calendar_day_list li {
-    display: inline-block;
-    padding: 5px 6px 5px 5px;
-    padding-top: 5px;
-    padding-right: 6px;
-    padding-bottom: 5px;
-    padding-left: 5px;
-    text-align: center;
-    font-size: 11px;
-    font-weight: bold;
-    color: #666;
+ .calendar_day_list{
+ 	margin: auto;
+    width: min-content;
+} 
+
+.redactorSaveButton{
+	margin-left: 86%;
 }
